--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .settings/org.eclipse.php.core.prefs
 .settings/org.eclipse.wst.jsdt.ui.superType.container
 .settings/org.eclipse.wst.jsdt.ui.superType.name
+/nbproject/private/
