--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@
 .settings/org.eclipse.wst.jsdt.ui.superType.container
 .settings/org.eclipse.wst.jsdt.ui.superType.name
 /nbproject/private/
+.nbproject
 .idea
